5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1637_2703.log
== TEST (2019-04-09 10:20:33) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade => 18):
	print(idade.lower() "eleitor" )
	
else (idade < 18):
	print(idade.lower() "nao_eleitor" )
-- ERROR:
File "XXXX", line 3
    if (idade => 18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:51) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print(idade.lower() "eleitor" )
	
else (idade < 18):
	print(idade.lower() "nao_eleitor" )
-- ERROR:
File "XXXX", line 4
    print(idade.lower() "eleitor" )
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:22:38) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print(idade "eleitor".lower() )
	
else (idade < 18):
	print(idade "nao_eleitor".lower() )
-- ERROR:
File "XXXX", line 4
    print(idade "eleitor".lower() )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:26) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print(idade "eleitor" )
	
else (idade < 18):
	print(idade "nao_eleitor" )
-- ERROR:
File "XXXX", line 4
    print(idade "eleitor" )
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:14) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print("eleitor" )
	
else (idade < 18):
	print("nao_eleitor" )
-- ERROR:
File "XXXX", line 6
    else (idade < 18):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:32) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print("eleitor" )
	
else:
	print("nao_eleitor" )
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:24:45) 
-- CODE:
idade = int(input("idade da pessoa: "))

if (idade >= 18):
	print("eleitor" )
	
else:
	print("nao_eleitor" )
-- EXECUTION TIME:
0.198823
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
